Clang: Follow symbol with Ctrl+click on invalid cursors

When cursor is invalid try to follow it with built-in
code model and highlight the token in case of success.

Fixes: QTCREATORBUG-21637
Change-Id: I4c765882817fa150a155074c9d71beceb5905af8
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>