src/plugins/clangcodemodel/clangfollowsymbol.cpp
@@ -28,6 +28,7 @@
 
 #include <coreplugin/editormanager/editormanager.h>
 #include <cpptools/cppmodelmanager.h>
+#include <cpptools/cppfollowsymbolundercursor.h>
 #include <texteditor/texteditor.h>
 
 #include <clangsupport/tokeninfocontainer.h>
@@ -183,12 +184,22 @@ void ClangFollowSymbol::findLink(const CppTools::CursorInEditor &data,
         return processLinkCallback(Utils::Link());
 
     if (!resolveTarget) {
-        processLinkCallback(linkAtCursor(cursor,
-                                         data.filePath().toString(),
-                                         static_cast<uint>(line),
-                                         static_cast<uint>(column),
-                                         processor));
-        return;
+        Utils::Link link = linkAtCursor(cursor,
+                                        data.filePath().toString(),
+                                        static_cast<uint>(line),
+                                        static_cast<uint>(column),
+                                        processor);
+        if (link == Utils::Link()) {
+            CppTools::FollowSymbolUnderCursor followSymbol;
+            return followSymbol.findLink(data,
+                                         std::move(processLinkCallback),
+                                         false,
+                                         snapshot,
+                                         documentFromSemanticInfo,
+                                         symbolFinder,
+                                         inNextSplit);
+        }
+        return processLinkCallback(link);
     }
 
     QFuture<CppTools::SymbolInfo> infoFuture
